Fixed overlapping completion status text

--- a/app/assets/stylesheets/training_modules/_cards.styl
+++ b/app/assets/stylesheets/training_modules/_cards.styl
@@ -46,6 +46,8 @@
 .action-card-title__completion
   position absolute
   right 69px
+  +below(tablet)
+    display none
 .action-card-text
   font-size 16px
   font-weight 400
